Working implementation. integrated messaging service

--- a/local.yml
+++ b/local.yml
@@ -6,3 +6,4 @@ database_name: "greenbone"
 database_password: "pappi"
 pulsar_url: "pulsar://127.0.0.1:6650"
 pulsar_cert: ""
+messaging_service_url: "http://localhost:8080/api/notify"
